--- a/style.css
+++ b/style.css
@@ -282,6 +282,7 @@ section {
     width: 100%;
     height: 400px;
     object-fit: cover;
+    object-position: center top;
     border-radius: 17px;
     position: relative;
     z-index: 2;
